--- a/templates/car_list.html
+++ b/templates/car_list.html
@@ -1,178 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <head>
-      <title>Bootstrap Example</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      />
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-      <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-          margin-bottom: 0;
-          border-radius: 0;
-        }
 
-        /* Add a gray background color and some padding to the footer */
-        footer {
-          background-color: #f2f2f2;
-          padding: 25px;
-        }
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+    .navbar {
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
 
-        .carousel-inner img {
-          width: 100%; /* Set width to 100% */
-          margin: auto;
-          min-height: 200px;
-        }
+    /* Remove the jumbotron's default bottom margin */
+    .jumbotron {
+      margin-bottom: 0;
+    }
 
-        /* Hide the carousel text when the screen is less than 600 pixels wide */
-        @media (max-width: 600px) {
-          .carousel-caption {
-            display: none;
-          }
-        }
-      </style>
-    </head>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle"
-            data-toggle="collapse"
-            data-target="#myNavbar"
-          >
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#"
-                ><span class="glyphicon glyphicon-log-in"></span> Login</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+  </style>
+</head>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-      </ol>
+<body>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="https://picsum.photos/id/133/10" alt="Image" />
-          <div class="carousel-caption">
-            <h3>the best garage</h3>
-            <p>the best place in town</p>
-          </div>
-        </div>
-
-        <div class="item">
-          <img
-            src="https://picsum.photos/id/133/20/30"
-            alt="Image"
-          />
-          <div class="carousel-caption">
-            <h3>buy with no regrets</h3>
-            <p>it's a promise.</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a
-        class="left carousel-control"
-        href="#myCarousel"
-        role="button"
-        data-slide="prev"
-      >
-        <span
-          class="glyphicon glyphicon-chevron-left"
-          aria-hidden="true"
-        ></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="right carousel-control"
-        href="#myCarousel"
-        role="button"
-        data-slide="next"
-      >
-        <span
-          class="glyphicon glyphicon-chevron-right"
-          aria-hidden="true"
-        ></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
+  <div class="jumbotron">
     <div class="container text-center">
-      <h3>What We Do</h3>
-      <br />
-      <div class="row">
-        {% for car in car_list %}
-        <div class="col-sm-4">
-          <img
-            src={{car["image"]}}
-            style="width: 100%"
-            alt="Image"
-          />
-          <p>{{car["number"]}}</p>
-        </div>
-        {% endfor %}
-        <!-- <div class="col-sm-4">
-          <img
-            src="https://picsum.photos/car/picsum/200/300"
-            class="img-responsive"
-            style="width: 100%"
-            alt="Image"
-          />
-          <p>{{car_list[1]["number"]}}</p>
-        </div> -->
-        <div class="col-sm-4">
-          <div class="well">
-            <button>the address is</button>
-          </div>
-          <div class="well">
-            <button>to reccomendations</button>
-          </div>
-        </div>
+      <h1>Online Store</h1>
+      <p>Mission, Vission & Values</p>
+    </div>
+  </div>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Logo</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Deals</a></li>
+          <li><a href="#">Stores</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+        </ul>
       </div>
     </div>
-    <br />
+  </nav>
 
-    <footer class="container-fluid text-center">
-      <p>find your car here</p>
-    </footer>
+  <div class="container">
+    <div class="row">
+      {% for car in car_list %}
+      <a href="/single_car/{{ car.id }}">
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">{{ car.number }}</div>
+            <div class="panel-body">
+              <img src="{{ car.image }}" class="img-responsive" width="80px" height="150px" style="width: 100%"
+                alt="Image" />
+            </div>
+            <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+          </div>
+        </div>
+      </a>
+      {% endfor %}
+    </div>
+  </div>
+  <br />
+  </div><br>
 
-    <!-- List of Cars:
-    <br />
-    {% for car in car_list %}
-    <li>Number:{{ car['number'] }} &nbsp; Problems:{{ car['problems'] }}</li>
+  <!-- <div class="container">    
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="panel panel-primary">
+        <div class="panel-heading">BLACK FRIDAY DEAL</div>
+        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+      </div>
+    </div> -->
+    
+  <footer class="container-fluid text-center">
+    <p>Online Store Copyright</p>
+    <form class="form-inline">
+      Get deals:
+      <input type="email" class="form-control" size="50" placeholder="Email Address" />
+      <button type="button" class="btn btn-danger">Sign Up</button>
+    </form>
+  </footer>
 
-    {% endfor %} -->
-  </body>
+  <!-- <footer class="container-fluid text-center">
+  <p>Online Store Copyright</p>  
+  <form class="form-inline">Get deals:
+    <input type="email" class="form-control" size="50" placeholder="Email Address">
+    <button type="button" class="btn btn-danger">Sign Up</button>
+  </form>
+</footer> -->
+
+</body>
+
 </html>
