--- a/templates/add_urgent.html
+++ b/templates/add_urgent.html
@@ -1,6 +1,6 @@
-<form action="/add_to_list" method="POST">
+<form action="/add_to_urgent_list" method="POST">
   Car number:<br />
-  <input type="text" id="cNumber" name="cNumber" /><br />
+  <input type="text" id="cUrgent" name="cUrgent" /><br />
   Car url:<br />
   <input type="url" id="cURL" name="cURL" /><br /><br />
   <input type="submit" value="Add Car" />
