--- a/templates/single_car.html
+++ b/templates/single_car.html
@@ -55,11 +55,15 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Deals</a></li>
-            <li><a href="#">Stores</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active">
+              <a href="http://127.0.0.1:9000/">All cars</a>
+            </li>
+            <li><a href="http://127.0.0.1:9000/urgent/">All urgent cars</a></li>
+            <li>
+              <a href="http://127.0.0.1:9000/add_urgent/">Add urgent cars</a>
+            </li>
+            <li><a href="http://127.0.0.1:9000/prices/">Prices</a></li>
+            <li><a href="http://127.0.0.1:9000/add_car/">Add your car</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
